--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,17 @@ body {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 /* ---------------------------------HEADER--------------------------- */
 
 .logo {
@@ -162,6 +173,7 @@ body {
   background-color: turquoise;
   border-color: red;
   border-style: solid;
+  text-align: center;
 }
 
 /* -----------------------------------Hidden------------------------------- */
